[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Nodes/Blend2/AGN_Blend2.gd" type="Script" id=1]
[ext_resource path="res://UI/Nodes/NodeSliderBase.tscn" type="PackedScene" id=2]

[node name="AGN_Blend2" type="GraphNode"]
margin_right = 32.0
margin_bottom = 29.0
title = "Blend2"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="in" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 38.0
text = "in"

[node name="out" type="Label" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 96.0
margin_bottom = 52.0
text = "out"
align = 2

[node name="blend" type="Label" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 96.0
margin_bottom = 67.0
text = "blend"

[node name="blend_amount" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 68.0
margin_right = 96.0
margin_bottom = 98.0

[node name="Label" parent="blend_amount/VBoxContainer" index="0"]
margin_right = 80.0

[node name="HSlider" parent="blend_amount/VBoxContainer" index="1"]
margin_right = 80.0

[node name="sync" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 99.0
margin_right = 96.0
margin_bottom = 123.0
text = "Sync"

[node name="MenuButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 124.0
margin_right = 96.0
margin_bottom = 144.0
text = "Edit Filters"

[connection signal="value_changed" from="blend_amount/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]

[editable path="blend_amount"]
